--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
-<h1>Привет, мир!</h1>
-<p>Здравствуйте, меня зовут София Ильина!</p>
+<h1>приветик, ребята ^_^</h1>
+<p>как вы знаете, меня зовут соня</p>
+<p>это мои соц.сети:</p>
+<p>вк:https://vk.com/innokentyilyin</p>
+<p>ds:8381</p>
+<p>inst:sotifia</p>
