--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <h1>приветик, ребята ^_^</h1>
 <p>как вы знаете, меня зовут соня</p>
 <p>это мои соц.сети:</p>
-<p>вк:https://vk.com/innokentyilyin</p>
-<p>ds:8381</p>
-<p>inst:sotifia</p>
+<ul>
+  <li>вк:https://vk.com/innokentyilyin</li>
+  <li>inst:sotifia</li>
+  <li>ds:8381</li>
+</ul>
