--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>приветик, ребята ^_^</h1>
 <p>как вы знаете, меня зовут соня</p>
-<p>это мои соц.сети:</p>
+<p>это мои соц.сети</p>
 <ul>
   <li>вк:https://vk.com/innokentyilyin</li>
   <li>inst:sotifia</li>
