--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <p>как вы знаете, меня зовут соня</p>
 <p>это мои соц.сети</p>
 <ul>
-  <li>вк:https://vk.com/innokentyilyin</li>
+  <li><a href="https://vk.com/innokentyilyin">вк</a></li>
   <li>inst:sotifia</li>
   <li>ds:8381</li>
 </ul>
