--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <p>это мои соц.сети</p>
 <ul>
   <li><a href="https://vk.com/innokentyilyin">вк</a></li>
-  <li>inst:sotifia</li>
+  <li><a href="https://www.instagram.com/sotifia/">inst</a></li>
   <li>ds:8381</li>
 </ul>
