--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
   <li><a href="https://vk.com/innokentyilyin">вк</a></li>
   <li><a href="https://www.instagram.com/sotifia/">inst</a></li>
   <li>ds:8381</li>
-<p><video src="https://www.w3schools.com/html/movie.mp4" width="320" height="240" controls></video></p>
+<video src="https://www.w3schools.com/html/movie.mp4" width="320" height="240" controls></video>
 </ul>
