--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<h1>приветик, ребята ^_^</h1>
-<p>как вы знаете, меня зовут соня</p>
+<h1>привет, ребята &omega; &weierp;</h1>
+<p>меня зовут соня и я учусь в 10 классе в физико-технологической подгруппе.и это мой сайт на котором я тренирую свои навыки в изучении HTML и CSS</p>
 <p>это мои соц.сети</p>
 <ul>
   <li><a href="https://vk.com/innokentyilyin">вк</a></li>
   <li><a href="https://www.instagram.com/sotifia/">inst</a></li>
   <li>ds:8381</li>
-<video src="https://www.w3schools.com/html/movie.mp4" width="320" height="240" controls></video>
 </ul>
