--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <h1>привет, ребята &weierp; </h1>
-<p>меня зовут соня и я учусь в 10 классе в физико-технологической подгруппе.и это мой сайт на котором я тренирую свои навыки в изучении HTML и CSS</p>
+<div style="font-size: 15px;">
+  <p>меня зовут соня и я учусь в 10 классе в физико-технологической подгруппе(вроде это так называется).</p>
+  <p>и это мой сайт на котором я тренирую свои навыки в изучении HTML и CSS</p>
+</div>
 <p>это мои соц.сети</p>
 <ul>
   <li><a href="https://vk.com/innokentyilyin">вк</a></li>
