--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <h1>привет, ребята &weierp; </h1>
-<div style="font-size: 25px;">
+<div style="font-size: 25px; border: solid 1px;">
   <p>меня зовут соня и я учусь в 10 классе в физико-технологической подгруппе(вроде это так называется).</p>
   <p>и это мой сайт на котором я тренирую свои навыки в изучении HTML и CSS</p>
 </div>
-<div style="border: solid 1px;">
-  <p>это мои соц.сети</p>
-  <ul>
-    <li><a href="https://vk.com/innokentyilyin">вк</a></li>
-    <li><a href="https://www.instagram.com/sotifia/">inst</a></li>
-    <li>ds:8381</li>
-  </ul>
-</div>
+<p>это мои соц.сети</p>
+<ul>
+  <li><a href="https://vk.com/innokentyilyin">вк</a></li>
+  <li><a href="https://www.instagram.com/sotifia/">inst</a></li>
+  <li>ds:8381</li>
+</ul>
