--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <p>меня зовут соня и я учусь в 10 классе в физико-технологической подгруппе(вроде это так называется).</p>
   <p>и это мой сайт на котором я тренирую свои навыки в изучении HTML и CSS</p>
 </div>
-<div style"font-size: 25px;">
+<div style="font-size: 25px;">
   <p>это мои соц.сети</p>
     <ul>
       <li><a href="https://vk.com/innokentyilyin">вк</a></li>
