--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <h1>привет, ребята &weierp; </h1>
 <div style="font-size: 25px;">
-  <p>меня зовут соня и я учусь в 10 классе в физико-технологической подгруппе(вроде это так называется).</p>
-  <p>и это мой сайт на котором я тренирую свои навыки в изучении HTML и CSS</p>
+  <p>этот сайт является мои проектом</p>
+  <p>Его тема - создание информационного ресурса, который ознакомит людей с музыкантами прошлого столетия.</p>
+  <p>Эта тема актуальна, так как за последние несколько лет звезды 50 годов начали умирать и люди начинают забывать о них.</p>
+  <p>Чтобы этого не случилось до конца, мой сайт будет некой википедией по ограниченной теме, раскрывающий её.</p>
+  <p>Для его реализации мне понадобится прохождение курсов по кодовой строке, HTML, CSS.</p>
 </div>
 <div style="font-size: 25px;">
-   <p>это мои соц.сети</p>
+   <p>это мои контакты</p>
     <ul>
       <li><a href="https://vk.com/innokentyilyin">вк</a></li>
       <li><a href="https://www.instagram.com/sotifia/">inst</a></li>
